deploy/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuaishouapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuaishouapi
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: kuaishouapi
    spec:
      containers:
        - name: kuaishouapi
          image: sammwp.azurecr.cn/kuaishouapi:#{IMAGE_TAG}#

          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
      tolerations:
        - key: "role"
          operator: "Exists"
