deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "#{SERVICE_NAME}#"
  namespace: kuaishouapi-ci
spec:
  ports:
    - port: 80
  selector:
    app: kuaishouapi
