deploy/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: "#{SERVICE_NAME}#"
  namespace: kuaishouapi-prod
spec:
  rules:
    - host: "#{DNS_NAME}#"
      http:
        paths:
          - backend:
              serviceName: "#{SERVICE_NAME}#"
              servicePort: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "#{DNS_NAME}#"
      secretName: tls-secert-douyin
